     exiting (and/or start-up has aborted due to configuration or run-time
     issues). Warning about "world readable" files clarified. [#2417]

 - common code: root-owned daemons now use not the hard-coded `PIDPATH` value
   set by the `configure` script during build, but can override it with a
   `NUT_PIDPATH` environment variable in certain use-cases (such as tests).
   [#2407]

 - brought keyword dictionaries of `nutconf` and `augeas` NUT configuration
   file parsers up to date; restored automated checks for `augeas` lenses.
   [issue #657, issue #2294]
+
   NOTE: Some known issues remain with augeas lens definitions so currently
   they should be able to parse common simple use-cases but not certain types
   of more complex configurations (e.g. some line patterns that involve too
   many double-quote characters) which are valid for NUT proper. [#657]

 - various recipe, documentation and source files were revised to address
   respective warnings issued by the new generations of analysis tools.
   [#823, #2437, link:https://github.com/networkupstools/nut-website/issues/52[nut-website issue #52]]


Release notes for NUT 2.8.2 - what's new since 2.8.1
----------------------------------------------------

https://github.com/networkupstools/nut/milestone/10

 - Fix fallout of development in NUT v2.8.0 and/or v2.8.1:
   * dstate machinery: a segmentation fault (null pointer dereference) was
     possible with `INSTCMD` processing of commands without parameters nor
     `TRACKING` identifier. [#2155]
   * USB bus number detection for libusb-1.0 builds was overly zealous and
     wrongly considered zero values as an error. [#2198]
   * `upsmon` recognition of `CAL` state could linger after the calibration
     activity was completed by the hardware, which led to mis-processing of
     shutdown triggers. Also, notification was added to report "finished
     calibration". [issue #2168, PR #2169]